tests/dataset/tpc-ds/compiler/java/q65.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq65912834569/001/Q65.java:63: error: bad operand types for binary operator '+'
            sum = sum + x;
                      ^
  first type:  double
  second type: Number
1 error
